# yyjson

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Package.swift  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  discussion.md
.github/workflows/: analysis.yml  archs.yml  checks.yml  cmake.yml  codecov.yml  compilers.yml  macos.yml  ubuntu.yml  windows.yml
cmake/: XcodeProperty.cmake
doc/: API.md  BuildAndTest.md  Building.md  DataStructure.md
doc/doxygen/: DoxyLayout.xml  Doxyfile.in
doc/doxygen/html/: annotated.html  annotated_dup.js  api.html  building-and-testing.html  classes.html  data-structures.html  deprecated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e68e8157741866f444e17edd764ebbae.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  globals_y.html  index.html  md__c_h_a_n_g_e_l_o_g.html  md_doc__a_p_i.html  md_doc__build_and_test.html  md_doc__data_structure.html  menudata.js  navtreedata.js  navtreeindex0.js  navtreeindex1.js  navtreeindex2.js  pages.html  structyyjson__alc.html  structyyjson__alc.js  yyjson_8h.html  yyjson_8h.js  yyjson_8h_structyyjson__arr__iter.js  yyjson_8h_structyyjson__doc.js  yyjson_8h_structyyjson__mut__arr__iter.js  yyjson_8h_structyyjson__mut__doc.js  yyjson_8h_structyyjson__mut__obj__iter.js  yyjson_8h_structyyjson__mut__val.js  (+2 more)
doc/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  defines_1.js  functions_0.js  pages_0.js  pages_1.js  pages_3.js  pages_4.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_4.js  variables_5.js  variables_8.js  variables_9.js  variables_b.js  variables_d.js  variables_e.js
doc/doxygen/theme/: yyjson-footer.html  yyjson-header.html
fuzz/: fuzzer.dict
misc/: experiment_depth_limit.c  make_tables.c
src/: yyjson.c  yyjson.h
test/: compile_ansi.c  compile_ansi.cpp  compile_smoke.c  test_allocator.c  test_err_code.c  test_json_merge_patch.c  test_json_mut_val.c  test_json_patch.c  test_json_pointer.c  test_json_reader.c  test_json_val.c  test_json_writer.c  test_number.c  test_roundtrip.c  test_string.c  test_string_writer.c
test/data/json/: README.md
test/data/json/test_yyjson/: comment_singleline_1(comment).json  comment_singleline_2(comment).json  fail_invalid_string_1.json  fail_invalid_string_2.json  fail_invalid_string_3.json  fail_invalid_string_4.json  str_unquoted_2(str_uq).json  str_unquoted_2(str_uq).min.json
test/data/num/: nan_inf_literal_pass.txt  num_fail.txt  real(ext).txt  real_1.txt  real_5.txt  real_pass_1.txt  sint_bignum.txt  sint_pass.txt  uint_bignum.txt  uint_pass.txt
test/util/: david_gay_dtoa.c  david_gay_dtoa.h  goo_double_conv.c  goo_double_conv.h  yy_test_utils.c  yy_test_utils.h
test/xctest/: yy_xctest.m
